add multi option
